--- a/pages/404.md
+++ b/pages/404.md
@@ -4,4 +4,4 @@ path: /404.html
 
 # NOT FOUND
 
-You just hit a route that doesn't exist... the sadness.
+You just hit a page that doesn't exist... the sadness.
